# loglite

./: .gitignore  COMMIT_MESSAGE.txt  FEATURES.md  FRONTEND_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  TAIL_INGESTION.md  start-backend.ps1  test-api.ps1
loglite-backend/: .env.example  Cargo.toml  test_logs.md
loglite-backend/src/: db.rs  id_gen.rs  main.rs  models.rs  search_engine.rs  state.rs  tail.rs  utils.rs
loglite-backend/src/entities/: app_sources.rs  apps.rs  events.rs  mod.rs  tail_offsets.rs
loglite-backend/src/handlers/: apps.rs  health.rs  ingest.rs  mod.rs  search_handler.rs  sources.rs  ttl.rs
loglite-frontend/: index.html  package-lock.json  package.json  tsconfig.json
loglite-frontend/src/: App.vue
